# finance-query-agent

./: .env.example  .env.localstack.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/commands/: codex-review.md  commit.md  localstack.md  resolve-pr.md
.github/workflows/: claude-code-review.yml  deploy.yml  pr-checks.yml
docs/: deployment.md  finance-query-agent-spec.md
localstack/: docker-compose.yml  schema-config.json  setup.sh  teardown.sh
scripts/: bootstrap.sh
src/finance_query_agent/: __init__.py  agent.py  config.py  connection.py  encryption.py  exceptions.py  handler.py  history.py  memory.py  observability.py  query_builder.py  redaction.py  visualization.py
src/finance_query_agent/schemas/: __init__.py  charts.py  mapping.py  (+3 more)
terraform/: dynamodb.tf  function_url.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_agent.py  test_config.py  test_connection.py  test_e2e.py  test_encryption.py  test_handler.py  test_history.py  test_memory.py  test_observability.py  test_query_builder.py  test_redaction.py  test_smoke.py  test_tool_error_logging.py  test_visualization.py
tests/test_schemas/: test_mapping.py
tests/test_tools/: test_fallback_sql.py  test_recurring.py  test_recurring_integration.py  test_spending.py  test_spending_integration.py  test_transactions.py  test_transactions_integration.py  test_trends.py  test_trends_integration.py  test_unified.py
tests/test_validation/: test_schema_validator.py  test_sql_validator.py
(+9 files in other folders)
