[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-query-agent"
version = "0.1.0"
description = "AI-powered natural language query agent for financial databases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.0,<2.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.35.0",
    "cryptography>=43.0",
    "tenacity>=9.0",
    "logfire>=3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "diff-cover>=9.0",
    "testcontainers[postgres]>=4.0",
    "moto[dynamodb]>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finance_query_agent"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
